fix: ui alignment and material ui replacement changes done

--- a/src/assets/styles/Chat.css
+++ b/src/assets/styles/Chat.css
@@ -2,50 +2,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap');
 
 /* chat container */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-}
-.chat-room, .chat-component {
+.chat-component {
     font-family: 'Open Sans', sans-serif;
-    display: grid;
-    place-items: center;
-    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
+    background-color: white;
+    width: 80%;
+    margin: 10px auto;
 }
 
 /* chat titile section */
-.chat {
-    border: 8px solid #dddddd;
+.chat-window {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    border: 2px solid #d6d6d6;
     border-radius: 24px;
     overflow: hidden;
 }
-.chat-room .title {
-    margin: 20px 0px;
-}
-.name {
+.chat-window .chat-username {
     display: flex;
     font-size: 32px;
     font-weight: 700;
-    padding: 8px 16px;
+    padding: 10px 16px;
     color: #7e7e7e;
     background-color: #ebebeb;
 }
-.name>span {
+.chat-username>span {
     color: #bbb;
 }
-.name-input {
+.chat-username .username {
     text-align: left;
     font-size: 24px;
     font-weight: 700;
     color: #7e7e7e;
     flex-grow: 1;
-    border: none;
-    margin: 0px 12px;
-    outline: none;
-    background-color: #ebebeb;
+    margin-left: 15px;
 }
 
 /* message container */
@@ -53,11 +45,11 @@
     display: flex;
     flex-direction: column;
     background-color: #f6f6f6;
-    width: auto;
-    height: 400px;
+    height: 450px;
     overflow-y: scroll;
     overflow-x: hidden;
 }
+
 .message-left,
 .message-right {
     list-style: none;
@@ -92,7 +84,7 @@
     font-size: 10px;
     margin-top: 4px;
 }
-.feedback {
+.message-container .feedback {
     font-style: italic;
     font-size: 12px;
     padding: 0px 16px 16px 16px;
@@ -107,29 +99,27 @@
     justify-content: space-between;
     width: 100%;
 }
+
 .message-input {
     flex-basis: 68%;
     height: 48px;
     font-size: 16px;
     border: none;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
     outline: none;
     padding: 0 12px;
     background-color: #fff;
 }
+
 .send-button {
     flex-basis: 28%;
     height: 48px;
     font-size: 16px;
     border: none;
     outline: none;
-    background-color: #fff;
-    cursor: pointer;
-    color: #2d2d2d;
 }
-.v-divider {
-    height: 48px;
-    width: 2px;
-    background-color: #f6f6f6;
+.send-button>span{
+    margin-left: 5px;
 }
 
 /* total clients section */
